# drweb-test

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  tasks.db
app/: db.py  models.py  routes.py  task_manager.py  tasks_api.py
